--- a/react-board/package.json
+++ b/react-board/package.json
@@ -11,10 +11,11 @@
   },
   "dependencies": {
     "axios": "^1.7.7",
+    "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.28.0",
-    "jwt-decode": "^4.0.0"
+    "react-select": "^5.8.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
